deployments/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: devopsbeerer-api
  name: devopsbeerer-api
  namespace: devopsbeerer-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devopsbeerer-api
  template:
    metadata:
      labels:
        app: devopsbeerer-api
    spec:
      dnsPolicy: ClusterFirst
      dnsConfig:
        options:
        - name: ndots
          value: "1"
        - name: timeout
          value: "2"
        - name: attempts
          value: "3"
        - name: single-request-reopen
        - name: no-tld-query
      containers:
        - image: rg.fr-par.scw.cloud/devopsbeerer/api:1.2.3
          imagePullPolicy: Always
          name: api
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
