deployments/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: devopsbeerer-api
  name: devopsbeerer-api
  namespace: devopsbeerer-api
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    name: http
  selector:
    app: devopsbeerer-api
