deployments/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devopsbeerer-api
  namespace: devopsbeerer-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "ca-cluster-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.devopsbeerer.local
      secretName: api-tls
  rules:
    - host: "api.devopsbeerer.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devopsbeerer-api
                port:
                  number: 3000
